# exfat-slim

./: .gitignore  Cargo.toml  README.md  run_all_examples.sh
.cargo/: config.toml
demos/embassy-demo/: Cargo.toml  README.md  memory.x
demos/embassy-demo/.cargo/: config.toml
demos/embassy-demo/src/: backup_ram.rs  lib.rs  main.rs  memory.rs  rcc_setup.rs  sdmmc_fs.rs  time.rs
examples/: append_file.rs  append_file_blocking.rs  combined.rs  copy_file.rs  create_dir.rs  delete_file.rs  file_exists.rs  file_exists_blocking.rs  open_file.rs  open_file_multi_cluster.rs  open_write.rs  read_dir.rs  read_file.rs  read_file_blocking.rs  remove_file.rs  remove_file_blocking.rs  rename.rs  write_append.rs  write_append_blocking.rs  write_file.rs  write_file_blocking.rs
examples/common/: asynchronous.rs  blocking.rs  mod.rs
src/: allocation.rs  allocation_bitmap.rs  block_device.rs  boot_sector.rs  directory.rs  directory_entry.rs  error.rs  fat.rs  file.rs  file_system.rs  fs.rs  io.rs  lib.rs  mocks.rs  slot_cache.rs  upcase_table.rs  utils.rs
