[package]
name = "exfat-slim"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
heapless = "0.9.1"
thiserror = { version = "2.0", default-features = false }
bitflags = { version = "2.10.0", default-features = false }

[dev-dependencies]
mbr-nostd = "0.1"
log = "0.4.28"
tokio = { version = "1.48", features = ["rt", "fs", "io-util", "macros"] }
color-backtrace = "0.6"
env_logger = "0.11.8"
flate2 = "1.1.5"
