[package]
name = "exfat-slim"
version = "0.1.0"
edition = "2024"
authors = ["David Haig"]
license = "Apache-2.0"
repository = "https://github.com/ninjasource/exfat-slim.git"
description = "An exFAT file system library written in safe Rust for embedded environments"
keywords = ["exfat", "embedded", "no_std"]
categories = ["embedded", "no-std", "filesystem"]
readme = "README.md"

[dependencies]
byteorder = "1.5.0"
heapless = "0.9.1"
thiserror = { version = "2.0", default-features = false }
bitflags = { version = "2.10.0", default-features = false }
defmt = { version = "0.3.8", optional = true }
bisync = "0.3.0"
log = "0.4.28"

[dev-dependencies]
mbr-nostd = "0.1"
log = "0.4.28"
tokio = { version = "1.48", features = ["rt", "fs", "io-util", "macros"] }
color-backtrace = "0.6"
env_logger = "0.11.8"
flate2 = "1.1.5"
rand = "0.9.2"
