[package]
name = "exfat-slim"
version = "0.4.1"
edition = "2024"
authors = ["David Haig"]
license = "Apache-2.0"
repository = "https://github.com/ninjasource/exfat-slim.git"
description = "An exFAT file system library written in safe Rust for embedded environments"
keywords = ["exfat", "embedded", "no_std"]
categories = ["embedded", "no-std", "filesystem"]
readme = "README.md"

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
heapless = { version = "0.9.1", default-features = false }
thiserror = { version = "2.0", default-features = false }
bitflags = { version = "2.10.0", default-features = false }
defmt = { version = "1", default-features = false, optional = true }
log = { version = "0.4", optional = true, default-features = false }
bisync = { version = "0.3.0", default-features = false }
embassy-sync = { version = "0.7.2", default-features = false, optional = true }
static_cell = { version = "2", default-features = false, optional = true }
block-device-driver = { version = "0.2.0", default-features = false }
aligned = "0.4.2"

[dev-dependencies]
mbr-nostd = "0.1"
log = "0.4"
tokio = { version = "1.48", features = [
    "rt",
    "fs",
    "io-util",
    "macros",
    "sync",
] }
color-backtrace = "0.6"
env_logger = "0.11.8"
flate2 = "1.1.5"
rand = "0.9.2"

[features]
default = []
defmt = ["dep:defmt"]
log = ["dep:log"]
embassy = ["dep:embassy-sync", "dep:static_cell"]
